# 3goodsources

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DNS-SETUP.md  Dockerfile  FAQ.md  README.md  TODOS.md  audit_log.json  contributions.json  identities.json  registry.json  render.yaml
.do/: app.yaml
.github/workflows/: docker.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md  v1.1-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/01-foundation-data-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-query-matching-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-mcp-protocol-implementation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-http-transport-layer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-identity-and-provenance/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-infrastructure-deployment/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-documentation-testing/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-tech-debt-cleanup/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-cors-hardening/: 09-01-PLAN.md  09-01-SUMMARY.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ansible/playbooks/: provision-do.yml
ansible/vars/: do-secrets.yml.example
docs/: CNAME  METHODOLOGY.md  PUBKY.md  SCHEMA.md  index.html
examples/: sign_audit.rs
scripts/: docker-publish.sh
src/: config.rs  error.rs  fork.rs  lib.rs  main.rs  server.rs
src/audit/: error.rs  loader.rs  mod.rs  types.rs
src/contributions/: error.rs  loader.rs  mod.rs  types.rs
src/federation/: cache.rs  error.rs  mod.rs  types.rs
src/identity/: error.rs  loader.rs  mod.rs  types.rs
src/matcher/: config.rs  error.rs  mod.rs  normalize.rs  scorer.rs
src/mcp/: error.rs  handler.rs  mod.rs  tools.rs  types.rs
src/pubky/: error.rs  identity.rs
src/registry/: error.rs  loader.rs  mod.rs  types.rs
tests/: integration_audit.rs  integration_contributions.rs  integration_cors.rs  integration_identity.rs  integration_matching.rs  integration_mcp.rs  integration_registry.rs
tests/common/: mod.rs
tests/fixtures/: insufficient_patterns.json  invalid_ranks.json  invalid_slug.json  malformed.json  valid_registry.json  wrong_source_count.json
(+60 files in other folders)
