[package]
name = "three-good-sources"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
dotenvy = "0.15.7"
envy = "0.4.2"
hex = "0.4"
pkarr = { version = "5.0", default-features = false, features = ["keys"] }
regex = "1.12.2"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stop-words = { version = "0.9.0", features = ["iso", "nltk"] }
strsim = "0.11.1"
thiserror = "2.0.18"
ed25519-dalek = { version = "=3.0.0-pre.6", features = ["serde"] }
sha2 = "=0.11.0-rc.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt"] }

# Workaround for pkarr 5.0.2 dependency issues with pre-release curve25519-dalek
# Patch to use compatible git version that compiles
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", branch = "main" }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
